# flask-forge

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE_GUIDE.md  pyproject.toml  release.py
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
scripts/: README.md  check_version_sync.py  forge_release.py
src/forge/: __init__.py  cli.py
src/forge/commands/: db_cmd.py  generate_cmd.py  plugin_cmd.py  run_cmd.py
src/forge/templates/clean/: .gitignore
src/forge/templates/clean/src/{{package_name}}/shared/: logging.py
src/forge/utils/: fs.py
